# vadeen_osm

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
examples/: custom_data.rs  no_builder.rs  osm_builder.rs
src/: element.rs  geo.rs  lib.rs  osm_io.rs
src/osm_io/: error.rs  o5m.rs  xml.rs
src/osm_io/o5m/: reader.rs  varint.rs  writer.rs
src/osm_io/xml/: reader.rs  writer.rs
tests/: o5m_io.rs  xml_io.rs
tests/test_data/: .gitignore  generated.o5m  generated.osm  real_map.o5m  real_map.osm
