[package]
name = "vadeen_osm"
version = "0.4.2"
license = "MIT"
authors = ["Felix Stridsberg <felix.stridsberg@gmail.com>"]
edition = "2018"

repository = "https://github.com/Vadeen/vadeen_osm"

description = "IO and builder library for Open Street Map data."
readme = "README.md"

exclude = ["/.travis.yml"]

[dependencies]
chrono = "0.4"
quick-xml = "0.20"
